--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ background-color: #ffb6da;
 }
 
 #parallax-group-2 {
-  background-image: url("anorexia.jpg");
+  background-image: url("https://sun1-29.userapi.com/DiFbj4L6wmCdcb2RwUBfBJS2PYFeh7W7vlhYzQ/yx5WyitX5Bs.jpg");
 	background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
