--- a/style.css
+++ b/style.css
@@ -1,93 +1,136 @@
-
-
 /*common*/
-html, body, div, span, svg, blockquote, a, article {
-margin: 0;
-padding: 0;
-border: 0;
-font: inherit;
-vertical-align: baseline;
+html,
+body,
+div,
+span,
+svg,
+blockquote,
+a,
+article {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, img, svg, video {
-	display: block;}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+img,
+svg,
+video {
+  display: block;
+}
 
 /*--_____________________________________________*/
 
-	html {
-		
-	}
+html {
+}
 
-	body {
-		background: #353941;
-		color: #d6d6d6;
-		font-family: "mostra-nuova";
-	}
+body {
+  background: #353941;
+  color: #d6d6d6;
+  font-family: "mostra-nuova";
+}
 
+#navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+}
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 0.5em;
+  text-decoration: none;
+  border: none;
+  font-size: 1.2vw;
+}
+
+@media screen and (max-width: 800px) {
+  #navbar a {
+    font-size: 2.5vw;
+  }
+}
+
+.navlink {
+  visibility: hidden;
+}
+
+#mybody {
+  background-color: #a24855;
+}
 
 h1,
 h2 {
-	position: center; 
-	padding-top: 1em;
+text-align: center;
+  padding-top: 1em;
 }
 
 @media screen and (max-width: 800px) {
-	h1,
-	h2{
-		font-size: 4vw;
-		padding-top: 0;
-		margin:0;
-	}
+  h1,
+  h2 {
+    font-size: 4vw;
+    padding-top: 0;
+    margin: 0;
+  }
 }
-
 
 h3,
-h4
-{
-	padding-top: 0.5em;
-	text-align: center;
-	
+h4 {
+  padding-top: 0.5em;
+  text-align: center;
 }
 
 @media screen and (max-width: 800px) {
-	h3,
-	h4 
-	{
-		font-size: 3.2vw;
-	}
+  h3,
+  h4 {
+    font-size: 3.2vw;
+  }
 }
 
-article  {
-	padding: 0.3em 1em;
+article {
+  padding: 0.3em 1em;
 }
-
-
 
 p {
-	font-size: 1.5vw;
+  font-size: 1.5vw;
 }
 
 @media screen and (max-width: 800px) {
-	p {
-		font-size: 4vw;}
-
+  p {
+    font-size: 4vw;
+  }
 }
-
 
 a {
- color: #333333; 
+  color: #333333;
   text-decoration: none;
   text-transform: lowercase;
-font-size: 1.5vw;
-	font-weight: 100;
-padding-left: 0.5em;
-	border-left: 1px solid grey;
+  font-size: 1.5vw;
+  font-weight: 100;
+  padding-left: 0.5em;
+  border-left: 1px solid grey;
 }
 
 @media screen and (max-width: 800px) {
-	a {
-		font-size: 3vw;
-	}
+  a {
+    font-size: 3vw;
+  }
 }
 
 a:hover {
@@ -99,150 +142,152 @@ a:active {
 }
 
 a:visited {
-  color: purple;
+  color: #a24855;
 }
-
-
 
 .b-color {
-	padding: 0.1em 0.2em;
-	background-color: #E9E9E9;
-	color: #333333;
+  padding: 0.1em 0.2em;
+  background-color: #e9e9e9;
+  color: #333333;
 }
 @media screen and (max-width: 800px) {
-	.b-color {
-		font-size: 4vw;
-	}
+  .b-color {
+    font-size: 4vw;
+  }
 }
 
 .c-note {
   background-color: #353941;
-  border-left: 1em solid #A24855;
+  border-left: 1em solid #a24855;
   padding: 1em;
-	font-size: 1.5vw;
+  font-size: 1.5vw;
 }
 
 @media screen and (max-width: 800px) {
-	.c-note {
-		font-size: 3.5vw;
-	}
+  .c-note {
+    font-size: 3.5vw;
+  }
 }
 
 .c-interview {
-	position: relative;
-	padding: 0.5em 1em;
-	font-size: 2vw;
-	font-weight: 50;
-	color: #333;
-	background:linear-gradient(#d3d3d3,#d8d9d3);
- box-shadow: 0px 0px 10px rgba(0,0,0,0.1);}
-
-@media screen and (max-width: 800px) {
-	.c-interview {
-		font-size: 4.5vw;
-	}
+  position: relative;
+  padding: 0.5em 1em;
+  font-size: 2vw;
+  font-weight: 50;
+  color: #333;
+  background: linear-gradient(#d3d3d3, #d8d9d3);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+@media screen and (max-width: 800px) {
+  .c-interview {
+    font-size: 4.5vw;
+  }
+}
+
+
+
+
+.dividing-line {
+  height: 2px;
+  max-width: 40%;
+  margin: 2em auto;
+  background: #d6d6d6;
+  background: linear-gradient(
+    90deg,
+    hsl(0, 0%, 20%),
+    hsl(0, 0%, 70%),
+    hsl(0, 0%, 20%)
+  );
+}
 
 .intro {
-	max-width: 50%;
-	margin: auto;
-	background-color: #353941;
+  max-width: 50%;
+  margin: auto;
+  background-color: #353941;
 }
 
-
 @media screen and (max-width: 800px) {
-	.intro {
-		max-width: 90%;
-	}
+  .intro {
+    max-width: 90%;
+  }
 }
 
 .section {
-	max-width: 60%;
-	margin: 0 auto 0;
-	padding:  1em;
-	border-left: 1px solid grey;
-	background-color: #353941;
+  max-width: 60%;
+  margin: 0 auto 0;
+  padding: 1em;
+  border-left: 1px solid grey;
+  background-color: #353941;
 }
 
 @media screen and (max-width: 800px) {
-	.section {
-		max-width: 100%;
-		overflow: hidden;
-	}
+  .section {
+    max-width: 100%;
+    overflow: hidden;
+  }
 }
 
 /*________________________________________________________lead */
 
 #disorder-lead {
-	max-width: 70%;
-	margin: auto;
-	padding: 0.2em;
-	background: #B58700;
-	border-style: groove 2px black;
-	box-shadow: 0 0 10px rgba(0,0,0,0.2);
-	top: -1.5em;
-	color: #353941;
+  max-width: 70%;
+  margin: auto;
+  padding: 0.2em;
+  background: #a24855;
+  border-style: groove 2px black;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  top: -2em;
+  color: #353941;
 }
 
-.lead{
-	text-align: center;
-	position: relative;
+.lead {
+  text-align: center;
+  position: relative;
 }
 
-hr{
-	border: none;
-	background-color: #353941;
-	height: 2px;
-	max-width: 80%;
+hr {
+  border: none;
+  background-color: #353941;
+  height: 2px;
+  max-width: 80%;
 }
-
-
 
 /*____________________________________ list*/
 
-
-.list{
-	background-color: #353941;		
+.list {
+  background-color: #353941;
 }
 
 @media screen and (max-width: 800px) {
-	.list {
-		font-size: 3.5vw;
-	}
+  .list {
+    font-size: 3.5vw;
+  }
 }
 
 ul {
-	
-	color: #D6D6D6;
-	width: 80%;
-	list-style: none;
+  color: #d6d6d6;
+  width: 80%;
+  list-style: none;
 }
 
 @media screen and (max-width: 800px) {
-	ul {
-		width: 90%;
-	}
+  ul {
+    width: 90%;
+  }
 }
 
-
-li
-{
-	border-left: 1px solid #d789d7; 
-	padding-left: 0.2em;
-	padding: 0.5em;
-
+li {
+  border-left: 1px solid #a24855;
+  padding-left: 0.2em;
+  padding: 0.5em;
 }
 
 @media screen and (max-width: 800px) {
-	.li {
-		padding-left: 0.1em 0.1em 0 0.1em;
-		
-	}
+  .li {
+    padding-left: 0.1em 0.1em 0 0.1em;
+  }
 }
-
-
-
 
 /* ___________________________________parallax */
 
@@ -251,18 +296,15 @@ li
   height: 90vh;
   overflow-x: hidden;
   overflow-y: auto;
-background-color: #353941;
-	font-family: "mostra-nuova";
-	
+  background-color: #353941;
+  font-family: "mostra-nuova";
 }
-
 
 .parallax__group {
   position: relative;
   height: 90vh;
   transform-style: preserve-3d;
-  box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
-	
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .parallax__layer {
@@ -271,19 +313,19 @@ background-color: #353941;
   right: 0;
   bottom: 0;
   left: 0;
-	transform: translateZ(0);
+  transform: translateZ(0);
 }
 
-  .parallax-content {
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-	  color: #F0F0F0;
-	  font-size: 1.5vw;
-  }
+.parallax-content {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  color: #f0f0f0;
+  font-size: 1.5vw;
+}
 
 /*
 #parallax-group-1 {
@@ -292,13 +334,13 @@ background-color: #353941;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-	
+
 }
 */
 
 #parallax-group-2 {
   background-image: url("anorexia.jpg");
-	background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -306,7 +348,7 @@ background-color: #353941;
 
 #parallax-group-3 {
   background-image: url("spread.gif");
-	  background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -314,23 +356,22 @@ background-color: #353941;
 
 #parallax-group-4 {
   background-image: url("overeating.jpg");
-	  background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
 
 #parallax-group-5 {
   background-image: url("fork.jpg");
- background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 #parallax-group-6 {
   background-image: url("dismorphy.jpg");
-	  background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -338,7 +379,7 @@ background-color: #353941;
 
 #parallax-group-7 {
   background-image: url("shugar.gif");
-	  background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -346,7 +387,7 @@ background-color: #353941;
 
 #parallax-group-8 {
   background-image: url("culturist.jpg");
-	  background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -354,112 +395,198 @@ background-color: #353941;
 
 #parallax-group-9 {
   background-image: url("ending.jpg");
-	  background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-
-
-
 /*__________________________________________________ Quiz */
 
 #quiz-wrapper {
-	display: flex;
-	justify-content: center;
-	padding-left: 1em;
-	font-size: 1vw;
+  display: flex;
+  justify-content: center;
+  padding-left: 1em;
+  font-size: 1vw;
 }
 
 #quiz {
-    margin-left: 0px;
-    background: #353941;
-    padding: 1em;
-    max-width: 50%;
-	color: #d6d6d6;
+  margin-left: 0px;
+  background: #353941;
+  padding: 1em;
+  max-width: 50%;
+  color: #d6d6d6;
 }
 
 form {
-	font-size: 1vw;
+  font-size: 1vw;
 }
 
 @media screen and (max-width: 800px) {
-	form {
-		font-size: 3vw;
-	}
+  form {
+    font-size: 3vw;
+  }
 }
 
 #button {
-    background: #d6d6d6;
-    border: none;
-    border-radius: 20px;
-    padding: 0.5em;
-    color: #353941;
-    font-size: 1vw;
-    transition-duration:.5s;
-    margin-top: 1.5em;
-	box-shadow: rgba(0, 0, 20, 0.5);
+  background: #d6d6d6;
+  border: none;
+  border-radius: 20px;
+  padding: 0.5em;
+  color: #353941;
+  font-size: 1vw;
+  transition-duration: 0.5s;
+  margin-top: 1.5em;
+  box-shadow: rgba(0, 0, 20, 0.5);
 }
 
 @media screen and (max-width: 800px) {
-	#button {
-		font-size: 3vw;
-	}
+  #button {
+    font-size: 3vw;
+		font-family: "mostra-nuova";
+  }
 }
-
 
 #button.hover {
-    background: #d6d6d6;
-    border: 1px solid #B58700;
-    cursor: pointer;
+  background: #d6d6d6;
+  border: 1px solid #b58700;
+  cursor: pointer;
 }
-
 
 #after_submit {
-    visibility: hidden;
-   border-left: 1px solid #d6d6d6;
-    padding :1px 2px 1px 2px;
-    border-radius:0.5px;
-    margin-left:5px;
-    font-size:1em;
+  visibility: hidden;
+  border-left: 1px solid #d6d6d6;
+  padding: 1px 2px 1px 2px;
+  border-radius: 0.5px;
+  margin-left: 5px;
+  font-size: 1em;
 }
 
-
-/*_____________________________________________ AOS*/
-
-
-/*
-[data-aos="fade"] {
-  opacity: 0;
-  transition-property: opacity;
-	duration: 2000;
-	offset: 400;
-}
-
-[data-aos="fade"].aos-animate {
-  opacity: 1;
-	offset: 400;
-	duration: 2000;
+#after_submit {
+	max-width: 50%;
 }
 
 
 
-[data-aos="fade-up"]{
-duration: 3000;
-offset: 500;
-easing: "ease-in-sine";}
-*/
+/*________________________________________________________________ interview cards*/
+
+.interview-cards {
+  display: flex;
+}
+
+@media screen and (max-width: 800px) {
+  .interview-cards {
+    display: block;
+  }
+}
+
+.interview-card {
+  margin: 0.5em;
+  padding: 1em;
+  background-color: #d8d9d3;
+  color: #333;
+  transition: all 0.2s ease-in-out;
+}
+
+.interview-card:hover {
+  transform: scale(0.9);
+}
 
 
+/*___________________________________ feedback form */
 
+.callbackform  {
+	max-width: 70%;
+	margin: auto;
+	font-family: "mostra-nuova";
+
+}
+
+@media screen and (max-width: 800px) {
+  .callbackform {
+		max-width: 90%;
+		margin: auto;
+  }
+}
+
+.form-wrapper {
+display: block;
+padding: 1em;
+text-align: center;
+}
+
+
+.form-group input,
+.form-group textarea {
+	width: 30vw;
+	font-family: "mostra-nuova";
+}
+
+@media screen and (max-width: 800px) {
+	.form-group input,
+	.form-group textarea {
+		width: 80vw;
+  }
+}
+
+#feedback {
+	padding-bottom: 2em;
+}
+
+button {
+	font-family: "mostra-nuova";
+	border-radius: 10px;
+}
+
+
+/*_______________________________________________________________footer*/
 .footer {
-	height: 10vh;
-	background: #ccc;
-	background-color:  #334;
+	bottom:0;
+	width: 100%;
+	background-color: #333;
+	z-index: -1;
+	box-shadow: inset 2px 2px rgba(0, 0, 0, 0.3);
+	display: flex;
+}
+
+.footer-caption {
+	padding-top: 1em;
+	font-size: 1.2vw;
+	color: black;
+}
+
+@media screen and (max-width: 800px) {
+	.footer-caption {
+		font-size: 3vw;
+  }
 }
 
 
+.footer-text {
+ color: black;
+ font-size: 1vw;
+ padding: 0 0 0 0.5em;
+	}
 
+	@media screen and (max-width: 800px) {
+		.footer-text {
+		font-size: 3vw;
+	  }
+	}
 
+.insta {
+	display: flex;
+	padding: 0.5em 0;
+}
 
+.credits,
+.copyright {
+	width: 50%;
+}
+
+@media screen and (max-width: 800px) {
+	.credits,
+	.copyright {
+		width: 100%;
+  }
+}
