--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ li {
 
 
 #parallax-group-5 {
-  background-image: url("fork-horizontal.jpg");
+  background-image: url("fork.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
